[gd_scene load_steps=63 format=3 uid="uid://135cro1dhcwm"]

[ext_resource type="Script" path="res://Scripts/levelCustomize.gd" id="1_ntia7"]
[ext_resource type="Texture2D" uid="uid://w4uevn7obhnj" path="res://assets/background/Free Pixel Art Forest/Preview/Background.png" id="2_hvrnc"]
[ext_resource type="Texture2D" uid="uid://cj45b0imwu6o2" path="res://levels/maps/gothic-castle-preview.png" id="3_sm5p7"]
[ext_resource type="Texture2D" uid="uid://v0cv6ckg1nwv" path="res://Vid/arrow.png" id="4_ivtxi"]
[ext_resource type="Texture2D" uid="uid://bnlf5d5ya5m37" path="res://levels/characters/demon-idle.png" id="5_t44sq"]
[ext_resource type="Texture2D" uid="uid://do4hi5ow4laxr" path="res://levels/characters/fire-skull.png" id="6_57b6n"]
[ext_resource type="Texture2D" uid="uid://qbe1n18ov2y6" path="res://levels/characters/gothic-hero-idle.png" id="7_jctdx"]
[ext_resource type="Texture2D" uid="uid://c6landk07kx8j" path="res://levels/characters/Spritesheet.png" id="8_3xk8n"]
[ext_resource type="Texture2D" uid="uid://dhqt7sq3ew1b3" path="res://levels/characters/sunny-dragon-fly.png" id="9_dg3yo"]
[ext_resource type="Texture2D" uid="uid://b0onh4u7brqtk" path="res://Vid/right-arrow.png" id="10_78ljv"]
[ext_resource type="PackedScene" uid="uid://b72l10ewoqn00" path="res://Scenes/play/qShow.tscn" id="11_qh0bq"]
[ext_resource type="PackedScene" uid="uid://dvisx50b4ko85" path="res://Scenes/options/add_question.tscn" id="12_21vy2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rqema"]
atlas = ExtResource("5_t44sq")
region = Rect2(0, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_so7lg"]
atlas = ExtResource("5_t44sq")
region = Rect2(160, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsa3j"]
atlas = ExtResource("5_t44sq")
region = Rect2(320, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjsly"]
atlas = ExtResource("5_t44sq")
region = Rect2(480, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhck"]
atlas = ExtResource("5_t44sq")
region = Rect2(640, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3u4d"]
atlas = ExtResource("5_t44sq")
region = Rect2(800, 0, 160, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_07yao"]
atlas = ExtResource("6_57b6n")
region = Rect2(0, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01g6"]
atlas = ExtResource("6_57b6n")
region = Rect2(96, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_441ee"]
atlas = ExtResource("6_57b6n")
region = Rect2(192, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tinag"]
atlas = ExtResource("6_57b6n")
region = Rect2(288, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_168v4"]
atlas = ExtResource("6_57b6n")
region = Rect2(384, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7v00"]
atlas = ExtResource("6_57b6n")
region = Rect2(480, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3555a"]
atlas = ExtResource("6_57b6n")
region = Rect2(576, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb1uk"]
atlas = ExtResource("6_57b6n")
region = Rect2(672, 0, 96, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1q10"]
atlas = ExtResource("7_jctdx")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_em4a3"]
atlas = ExtResource("7_jctdx")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuvd7"]
atlas = ExtResource("7_jctdx")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpwcs"]
atlas = ExtResource("7_jctdx")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsu88"]
atlas = ExtResource("7_jctdx")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmb5m"]
atlas = ExtResource("7_jctdx")
region = Rect2(96, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0k6c"]
atlas = ExtResource("7_jctdx")
region = Rect2(192, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vrqc"]
atlas = ExtResource("7_jctdx")
region = Rect2(288, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g202g"]
atlas = ExtResource("7_jctdx")
region = Rect2(0, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulicb"]
atlas = ExtResource("7_jctdx")
region = Rect2(96, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_25jwg"]
atlas = ExtResource("7_jctdx")
region = Rect2(192, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xmmw"]
atlas = ExtResource("7_jctdx")
region = Rect2(288, 48, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mlch"]
atlas = ExtResource("8_3xk8n")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjfux"]
atlas = ExtResource("8_3xk8n")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctsc3"]
atlas = ExtResource("8_3xk8n")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdjx2"]
atlas = ExtResource("8_3xk8n")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvxka"]
atlas = ExtResource("8_3xk8n")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd2up"]
atlas = ExtResource("8_3xk8n")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8kjr"]
atlas = ExtResource("9_dg3yo")
region = Rect2(0, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao5gk"]
atlas = ExtResource("9_dg3yo")
region = Rect2(192, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_hus5o"]
atlas = ExtResource("9_dg3yo")
region = Rect2(384, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbdmy"]
atlas = ExtResource("9_dg3yo")
region = Rect2(576, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7mf0"]
atlas = ExtResource("9_dg3yo")
region = Rect2(768, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aga0"]
atlas = ExtResource("9_dg3yo")
region = Rect2(960, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_47le5"]
atlas = ExtResource("9_dg3yo")
region = Rect2(1152, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgiby"]
atlas = ExtResource("9_dg3yo")
region = Rect2(1344, 0, 192, 176)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps643"]
atlas = ExtResource("9_dg3yo")
region = Rect2(1536, 0, 192, 176)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8d70"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqema")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so7lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsa3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjsly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3u4d")
}],
"loop": true,
"name": &"1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07yao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s01g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_441ee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tinag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_168v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7v00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3555a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb1uk")
}],
"loop": true,
"name": &"2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1q10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_em4a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuvd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpwcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsu88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmb5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0k6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vrqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g202g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulicb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25jwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xmmw")
}],
"loop": true,
"name": &"3",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mlch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjfux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctsc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdjx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvxka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd2up")
}],
"loop": true,
"name": &"4",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8kjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao5gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hus5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbdmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7mf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aga0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47le5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgiby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps643")
}],
"loop": true,
"name": &"5",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqyh4"]
bg_color = Color(0.0850163, 0.116921, 0.16289, 1)

[sub_resource type="Theme" id="Theme_jhxon"]
Panel/styles/panel = SubResource("StyleBoxFlat_bqyh4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v2vra"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aro4s"]
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xu0f"]
bg_color = Color(0.838897, 0.838897, 0.838897, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqkun"]
bg_color = Color(0.58787, 0.607684, 0.578067, 1)
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_bwbt5"]
Button/styles/disabled = SubResource("StyleBoxFlat_v2vra")
Button/styles/focus = SubResource("StyleBoxFlat_aro4s")
Button/styles/hover = SubResource("StyleBoxFlat_6xu0f")
Button/styles/normal = SubResource("StyleBoxFlat_iqkun")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ih8i"]

[node name="levelCustomize" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ntia7")
metadata/_edit_vertical_guides_ = [-109.0]

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.862745)
position = Vector2(578.5, 202.75)
scale = Vector2(1.24246, 1.12926)
texture = ExtResource("2_hvrnc")

[node name="ConfrimButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1038.0
offset_top = 571.0
offset_right = 1154.0
offset_bottom = 643.0
text = "Confirm"

[node name="Save" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 97.0
offset_right = 763.0
offset_bottom = 130.0
placeholder_text = "Save as..."
alignment = 1

[node name="Rename" type="Label" parent="."]
layout_mode = 0
offset_left = 581.0
offset_top = 64.0
offset_right = 698.0
offset_bottom = 107.0
theme_override_font_sizes/font_size = 28
text = "Rename:"
horizontal_alignment = 2

[node name="Mode" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 67.0
offset_right = 128.0
offset_bottom = 106.0
theme_override_font_sizes/font_size = 28
text = "Mode:"

[node name="Question" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 65.0
offset_right = 456.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 28
text = "Question:"

[node name="Question2" type="Label" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 228.0
offset_right = 462.0
offset_bottom = 265.0
theme_override_font_sizes/font_size = 30
text = "Gameplay:"

[node name="LevelCustom" type="Label" parent="."]
layout_mode = 0
offset_left = 366.0
offset_top = 4.0
offset_right = 756.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 40
text = "Level customization"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 101.0
offset_right = 294.0
offset_bottom = 368.0

[node name="Single" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 39.0
offset_bottom = 39.0

[node name="Boss" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 42.0
offset_top = 57.0
offset_right = 66.0
offset_bottom = 81.0

[node name="Endless" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 42.0
offset_top = 99.0
offset_right = 66.0
offset_bottom = 123.0

[node name="Multi" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 143.0
offset_right = 39.0
offset_bottom = 167.0

[node name="PvP" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 42.0
offset_top = 188.0
offset_right = 66.0
offset_bottom = 212.0

[node name="Survival" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 42.0
offset_top = 230.0
offset_right = 66.0
offset_bottom = 254.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 46.0
offset_top = 10.0
offset_right = 209.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 25
text = "Singleplayer"

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 71.0
offset_top = 52.0
offset_right = 234.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 25
text = "Boss fight"

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 71.0
offset_top = 94.0
offset_right = 245.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 25
text = "Endless fight"

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 138.0
offset_right = 222.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 25
text = "Multiplayer"

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 70.0
offset_top = 182.0
offset_right = 244.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25
text = "PvP"

[node name="Label6" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 70.0
offset_top = 225.0
offset_right = 244.0
offset_bottom = 259.0
theme_override_font_sizes/font_size = 25
text = "Survival"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 100.0
offset_right = 561.0
offset_bottom = 227.0

[node name="DB" type="CheckBox" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.054
anchor_bottom = 0.167
offset_left = 13.0
offset_top = 22.0
offset_right = 23.77
offset_bottom = 13.268

[node name="DB2" type="CheckBox" parent="Panel2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.054
anchor_bottom = 0.167
offset_left = 13.0
offset_top = 77.0
offset_right = 23.77
offset_bottom = 71.441

[node name="UseDB" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 41.0
offset_top = 13.0
offset_right = 227.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 20
text = "Use database"

[node name="CustomQ" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 43.0
offset_top = 69.0
offset_right = 229.0
offset_bottom = 112.0
text = "Custom question input"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 268.0
offset_right = 565.0
offset_bottom = 368.0

[node name="turnBased" type="CheckBox" parent="Panel3"]
layout_mode = 0
offset_left = 15.0
offset_top = 59.0
offset_right = 39.0
offset_bottom = 83.0

[node name="dCombat" type="CheckBox" parent="Panel3"]
layout_mode = 0
offset_left = 16.0
offset_top = 18.0
offset_right = 40.0
offset_bottom = 42.0
button_pressed = true

[node name="TurnBased2" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 44.0
offset_top = 53.0
offset_right = 201.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 25
text = "Turn based:"

[node name="2dCombat2" type="Label" parent="Panel3"]
layout_mode = 0
offset_left = 44.0
offset_top = 13.0
offset_right = 186.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 25
text = "2D Combat"

[node name="Panel4" type="Panel" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 375.0
offset_right = 534.0
offset_bottom = 653.0

[node name="MapPreview" type="TextureRect" parent="Panel4"]
layout_mode = 0
offset_left = 35.0
offset_top = 36.0
offset_right = 450.0
offset_bottom = 272.0
texture = ExtResource("3_sm5p7")
expand_mode = 1

[node name="PreviousButton" type="Button" parent="Panel4"]
layout_mode = 0
offset_top = 124.0
offset_right = 40.0
offset_bottom = 164.0
icon = ExtResource("4_ivtxi")

[node name="PreviousButton2" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 520.0
offset_top = 134.001
offset_right = 560.0
offset_bottom = 174.001
icon = ExtResource("4_ivtxi")

[node name="NextButton" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 487.0
offset_top = 166.0
offset_right = 527.0
offset_bottom = 206.0
rotation = 3.13815
icon = ExtResource("4_ivtxi")

[node name="NextButton2" type="Button" parent="Panel4"]
layout_mode = 0
offset_left = 780.0
offset_top = 170.001
offset_right = 820.0
offset_bottom = 210.001
rotation = 3.13703
icon = ExtResource("4_ivtxi")

[node name="CharacterPreview" type="AnimatedSprite2D" parent="Panel4"]
position = Vector2(664, 151.445)
scale = Vector2(1, 1.15278)
sprite_frames = SubResource("SpriteFrames_p8d70")
animation = &"5"
autoplay = "5"
frame_progress = 0.148799

[node name="info" type="Label" parent="Panel4"]
layout_mode = 0
offset_right = 492.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 25
text = "gothic-castle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info1" type="Label" parent="Panel4"]
layout_mode = 0
offset_left = 531.0
offset_top = 50.4446
offset_right = 775.0
offset_bottom = 85.4446
theme_override_font_sizes/font_size = 25
text = "demon-idle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel5" type="Panel" parent="."]
layout_mode = 0
offset_left = 579.0
offset_top = 137.0
offset_right = 1107.0
offset_bottom = 430.0

[node name="Info" type="TextureRect" parent="Panel5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="info" type="Label" parent="Panel5"]
layout_mode = 0
offset_left = -1.0
offset_top = 229.0
offset_right = 528.0
offset_bottom = 293.0
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel7" type="Panel" parent="Panel5"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_jhxon")

[node name="Label" type="Label" parent="Panel5/Panel7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Level created!"

[node name="Panel6" type="Panel" parent="."]
layout_mode = 0
offset_left = 831.0
offset_top = 437.0
offset_right = 1032.0
offset_bottom = 643.0

[node name="Label" type="Label" parent="Panel6"]
layout_mode = 0
offset_left = 8.0
offset_top = 17.0
offset_right = 137.0
offset_bottom = 46.0
text = "Round numbers:"

[node name="Label2" type="Label" parent="Panel6"]
layout_mode = 0
offset_left = 10.0
offset_top = 101.0
offset_right = 139.0
offset_bottom = 130.0
text = "Question numbers:"

[node name="LineEdit" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 10.0
offset_top = 52.0
offset_right = 132.0
offset_bottom = 83.0

[node name="LineEdit2" type="LineEdit" parent="Panel6"]
layout_mode = 0
offset_left = 14.0
offset_top = 138.0
offset_right = 136.0
offset_bottom = 169.0

[node name="Back" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 73.0
offset_top = 67.0
offset_right = 147.0
offset_bottom = 125.0
rotation = 3.14159
theme = SubResource("Theme_bwbt5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ih8i")
icon = ExtResource("10_78ljv")
icon_alignment = 1

[node name="qShow" parent="." instance=ExtResource("11_qh0bq")]
visible = false
layout_mode = 1

[node name="UI" parent="." instance=ExtResource("12_21vy2")]
visible = false
layout_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="ConfrimButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Single" to="." method="_on_single_pressed"]
[connection signal="pressed" from="Panel/Boss" to="." method="_on_boss_pressed"]
[connection signal="pressed" from="Panel/Endless" to="." method="_on_endless_pressed"]
[connection signal="pressed" from="Panel/Multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="Panel/PvP" to="." method="_on_pv_p_pressed"]
[connection signal="pressed" from="Panel/Survival" to="." method="_on_survival_pressed"]
[connection signal="pressed" from="Panel2/DB" to="." method="_on_db_pressed"]
[connection signal="pressed" from="Panel2/DB2" to="." method="_on_db_2_pressed"]
[connection signal="pressed" from="Panel2/UseDB" to="." method="_on_use_db_pressed"]
[connection signal="pressed" from="Panel2/CustomQ" to="." method="_on_custom_q_pressed"]
[connection signal="pressed" from="Panel3/turnBased" to="." method="_on_turn_based_pressed"]
[connection signal="pressed" from="Panel3/dCombat" to="." method="_on_d_combat_pressed"]
[connection signal="pressed" from="Panel4/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="Panel4/PreviousButton2" to="." method="_on_previous_button_2_pressed"]
[connection signal="pressed" from="Panel4/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel4/NextButton2" to="." method="_on_next_button_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
